# optee_os

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile
.github/workflows/: stale_issue.yml  stale_pr.yml
core/: core.mk
core/arch/arm/kernel/: ldelf_loader.c  thread.c  thread_optee_smc.c
core/arch/arm/pta/: system.c
core/arch/arm/tee/: entry_fast.c
core/drivers/: tzc400.c
core/drivers/scmi-msg/: clock.c
core/lib/libtomcrypt/: sub.mk
core/lib/libtomcrypt/src/: mpa_desc.c
core/lib/libtomcrypt/src/ciphers/: aes.c  sub.mk
core/pta/: system.c
documentation/: rpi3.md
ldelf/: main.c  sys.c
lib/libdl/: dlfcn.c
lib/libmpa/: mpa_expmod.c
lib/libutee/: tee_system_pta.c
lib/libutee/include/: pta_system.h
lib/libutils/ext/include/: util.h
lib/libzlib/: sub.mk
mk/: aosp_optee.mk  compile.mk  config.mk
scripts/: setup_qemu_optee.sh  update_changelog.py
ta/: ta.mk
ta/mk/: ta_dev_kit.mk
